--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;0,800;0,900;1,800&display=swap');
+
+*{
+  font-family:  'Poppins', sans-serif;;
+}
 #root{
   background-image: url('./assets/bg.png');
   background-repeat: no-repeat;
@@ -6,20 +11,8 @@
   height: 100%;
   position: absolute;
 }
-
-#fetch-btn{
-  background-image: url('./assets/btn-bg.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  text-transform: capitalize;
-  opacity: 0.9;
-  transition: 0.3s ease;
-}
-#fetch-btn:hover{
-  opacity: 1;
+svg{
+  margin: 0 5px;
 }
 .App {
   text-align: center;
@@ -27,10 +20,20 @@
     margin: 0 auto;
 }
 #table-title {
-  font-size: 40px;
+  font-size: 36px;
+  color: #ae5fca;
   text-transform: capitalize;
-  margin-bottom: 20px;
+
   display: block;
+  text-align: left;
+}
+#sub-title {
+  text-align: left;
+  color: gray;
+  border-bottom: 1px solid gray;
+  width: 180px;
+  margin-bottom: 20px;
+  text-transform: capitalize;
 }
 .App-logo {
   height: 40vmin;
@@ -50,11 +53,6 @@
 #love img{
   width: 50px;
 }
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -71,11 +69,23 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.loader {
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 6px solid #c95fc1;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 20px auto;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
