--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,20 @@ svg{
 .App {
   text-align: center;
   width: 900px;
+  max-width: 100%;
     margin: 0 auto;
+}
+.wallet-adapter-dropdown {
+  position: fixed !important;
+  left: 0;
+  right: 0;
+}
+button.wallet-adapter-button.wallet-adapter-button-trigger {
+  justify-content: center;
+  text-align: right;
+  position: absolute;
+  right: 20px;
+  top: 20px;
 }
 #table-title {
   font-size: 36px;
