--- a/src/App.css
+++ b/src/App.css
@@ -52,20 +52,35 @@ button.wallet-adapter-button.wallet-adapter-button-trigger {
   height: 40vmin;
   pointer-events: none;
 }
-#love{
-  position: fixed;
-  color: white;
-    bottom: 50px;
-    left: 0;
-    right: 0;
-    text-transform: uppercase;
+#love {
+  color: #fff;
+  width: 200px;
+  bottom: 24px;
+  margin: 100px auto;
+  display: flex;
+  text-transform: uppercase;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 14px;
+  text-transform: capitalize;
+  filter: drop-shadow(2px 4px 6px black);
 }
-#love a{
-  display: block;
-}
-#love img{
-  width: 50px;
-}
+  #love  a{
+      text-decoration: none;
+  }
+  #love  span#logo {
+      display: block;
+      background: linear-gradient(96.02deg, #0CDAC4 0.22%, #395DF0 31.45%, #FD49AD 71.02%, #FF845A 104.34%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      --WebkitTextFillColor: transparent;
+  }
+  #love  img{
+      width: 40px;
+  }
+
 
 .App-header {
   background-color: #282c34;
